apps/prompt-master-prototype/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prompt-master-svc
  labels:
    app: prompt-master
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: prompt-master
