apps/prompt-master-prototype/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prompt-master-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prompt-master.corp.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prompt-master-svc
                port:
                  number: 80
